--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 32px;
+    text-align: center;
 }
 section{
     width: 100%;
