--- a/style.css
+++ b/style.css
@@ -3,9 +3,21 @@ body{
     font-size: 32px;
     text-align: center;
 }
+
+table{
+    margin: 0 auto;
+    width: 250px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+table > *{
+    border: 1px solid black;
+}
+
 section{
     width: 100%;
     height: 50vh;
+    margin-top: 56px;
     place-content: center;
     display: grid;
     grid-template-columns: repeat(4, 50px);
